# funcmp

./: .gitignore  .monotonerc  .mtn-ignore  .travis.yml  AUTHORS  ChangeLog  FMP.hs  INSTALL  Makefile  NEWS  README  Setup.lhs  funcmp.cabal  makefile  package.conf.in  prologue.txt
FMP/: Canvas.hs  Canvas.lhs  Color.hs  Color.lhs  Core.hs  File.hs  File.lhs  Frames.hs  Matrix.hs  PP.hs  Picture.hs  RedBlack.hs  Resolve.hs  Symbols.hs  Syntax.hs  Syntax.lhs  Term.hs  Tree.hs  Turtle.hs  Types.hs
doc/: FMPMain.hs  Manual.lhs  Manual_eng.lhs  README.doc  Tutorial.lhs  Tutorial_eng.lhs  fmp.ini  lhs2TeX.fmt
src/: FMP.lhs  FMPMain.lhs
src/FMP/: Core.lhs  Frames.lhs  Matrix.lhs  PP.lhs  Picture.lhs  RedBlack.lhs  Resolve.lhs  Symbols.lhs  Term.lhs  Tree.lhs  Turtle.lhs  Types.lhs
src/core/: FMP.lhs  FMPColor.lhs  FMPCore.lhs  FMPFile.lhs  FMPMpsyntax.lhs  FMPPP.lhs  FMPPicture.lhs  FMPResolve.lhs  FMPSymbols.lhs  FMPTerm.lhs  FMPTypes.lhs
src/extensions/: FMPCanvas.lhs  FMPFrames.lhs  FMPMatrix.lhs  FMPTree.lhs  FMPTurtle.lhs  RedBlack.lhs
texmf/: FuncMP.mp  fmp1.mf  fmp24.mf  fmp8.mf
