Name:            funcmp
Version:         0.0-2005-02-14
Author:          Meik Hellmund, Ralf Hinze, Joachim Korittky,
                 Marco Kuhlmann, Ferenc Wágner, Peter Simons
License:         GPL
Maintainer:      simons@cryp.to
Homepage:        http://cryp.to/funcmp/
Description:     Functional MetaPost
Build-Depends:   base, haskell98
Exposed-Modules:
    FMP,
    FMP.Canvas,
    FMP.Color,
    FMP.Core,
    FMP.File,
    FMP.Frames,
    FMP.Matrix,
    FMP.PP,
    FMP.Picture,
    FMP.RedBlack,
    FMP.Resolve,
    FMP.Symbols,
    FMP.Syntax,
    FMP.Term,
    FMP.Tree,
    FMP.Turtle,
    FMP.Types
