Name:           funcmp
Version:        0.0-2006-04-04
Author:         Meik Hellmund, Ralf Hinze, Joachim Korittky,
                Marco Kuhlmann, Ferenc Wágner, Peter Simons
License:        GPL
License-file:   COPYING
Maintainer:     simons@cryp.to
Homepage:       http://cryp.to/funcmp/
Description:    Functional MetaPost is a Haskell frontend
                to the MetaPost language by John Hobby.
                Users write their graphics as Haskell
                programs, which then emit MetaPost code
                that can be compiled into encapsulated
                PostScript files and smoothly included into
                e.g. LaTeX.
Synopsis:       Functional MetaPost
Build-Depends:  base, haskell98
Exposed-Modules:
    FMP,
    FMP.Canvas,
    FMP.Color,
    FMP.Core,
    FMP.File,
    FMP.Frames,
    FMP.Matrix,
    FMP.PP,
    FMP.Picture,
    FMP.RedBlack,
    FMP.Resolve,
    FMP.Symbols,
    FMP.Syntax,
    FMP.Term,
    FMP.Tree,
    FMP.Turtle,
    FMP.Types
